--- a/data/raw/gis/vlm4rs/human_annotation/paper_3.yaml
+++ b/data/raw/gis/vlm4rs/human_annotation/paper_3.yaml
@@ -54,19 +54,19 @@ blocks:
     intent_label: Prior Methods
     topic_label: Other Topics
   - marker: '[3, 4, 9, 10]'
-    intent_label: Prior Methods
+    intent_label: Prospective Application
     topic_label: Other Topics
   - marker: '[3, 11]'
-    intent_label: Prior Methods
+    intent_label: Prospective Application
     topic_label: Other Topics
   - marker: '[12, 13, 14]'
-    intent_label: Prior Methods
+    intent_label: Prospective Application
     topic_label: Other Topics
   - marker: '[12, 15]'
-    intent_label: Prior Methods
+    intent_label: Prospective Application
     topic_label: Other Topics
   - marker: '[1]'
-    intent_label: Model/Architecture Adoption
+    intent_label: Prospective Application
     topic_label: Other Topics
   - marker: '[16]'
     intent_label: Prior Methods
